--- a/Gaming-Assistant/app/build.gradle
+++ b/Gaming-Assistant/app/build.gradle
@@ -28,7 +28,14 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:cardview-v7:24.0.+'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'jp.wasabeef:picasso-transformations:2.1.0'
     compile 'com.google.code.gson:gson:2.4'
+    compile 'com.google.firebase:firebase-database:9.8.0'
+
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
